--- a/templates/base.html
+++ b/templates/base.html
@@ -310,10 +310,22 @@
                                     </a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/reports/list/">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="reportsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fas fa-chart-bar"></i><span class="nav-text">التقارير</span>
                                 </a>
+                                <ul class="dropdown-menu" aria-labelledby="reportsDropdown">
+                                    <li><a class="dropdown-item" href="{% url 'reports:orders_report' %}">
+                                        <i class="fas fa-shopping-cart"></i> تقرير الطلبات
+                                    </a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{% url 'reports:dashboard' %}">
+                                        <i class="fas fa-tachometer-alt"></i> لوحة تحكم التقارير
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="{% url 'reports:report_list' %}">
+                                        <i class="fas fa-list"></i> جميع التقارير
+                                    </a></li>
+                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/database/">
